--- a/src/components/UserListCard/UserListCard.css
+++ b/src/components/UserListCard/UserListCard.css
@@ -2,7 +2,7 @@
   background-color: #ffffff;
   padding: 12px 16px 12px 16px;
   background: #ffffff;
-  height: 110px;
+  min-height: 110px;
   box-shadow: 0px 2px 7px rgba(0, 0, 0, 0.2);
   border-radius: 4px;
   cursor: pointer;
