--- a/src/components/UserDetail/UserDetail.css
+++ b/src/components/UserDetail/UserDetail.css
@@ -12,6 +12,12 @@
 
   align-items: center;
 }
+.pageLoading {
+  height: calc(100vh - 100px);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
 @media only screen and (max-width: 650px) {
   .userDetail {
     width: 100%;
