--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -14,6 +14,14 @@ header {
   gap: 10px;
   font-weight: 500;
   cursor: pointer;
+  font-style: normal;
+  font-weight: 400;
+  font-size: 17px;
+  line-height: 150%;
+
+  /* identical to box height, or 26px */
+
+  color: #000000;
 }
 
 .nav .underLine {
@@ -29,4 +37,15 @@ header {
 }
 .nav:hover > .underLine {
   opacity: 1;
+}
+.appLogo > .heading {
+  font-family: 'Roboto';
+  font-style: normal;
+  font-weight: 700;
+  font-size: 24px;
+  line-height: 145%;
+
+  /* identical to box height, or 35px */
+
+  color: #000000;
 }
