--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -49,3 +49,14 @@ header {
 
   color: #000000;
 }
+
+@media only screen and (max-width: 420px) {
+  .nav > ul {
+    gap: 6px;
+    font-size: 15px;
+  }
+  .appLogo > .heading {
+    font-weight: 700;
+    font-size: 22px;
+  }
+}
