--- a/src/components/UserDetail/UserDetail.css
+++ b/src/components/UserDetail/UserDetail.css
@@ -23,5 +23,8 @@
     width: 100%;
     gap: 30px;
     padding-left: 10px;
+    flex-direction: column;
+    padding-top: 30px;
+    padding-bottom: 30px;
   }
 }
