--- a/src/index.css
+++ b/src/index.css
@@ -17,6 +17,9 @@ body {
   box-sizing: border-box;
 }
 
+body {
+  -webkit-tap-highlight-color: transparent;
+}
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
